--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Game for J</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <!--link rel="stylesheet" href="./assets/style.css"-->
   </head>
   <body>
-    <canvas id=game>
+    <canvas id=game width=700 height=500>
     </canvas>
     <script src="./scripts/main.js"></script>
   </body>
